--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
 
     <a
     border-b border-slate border-none hover:border-dashed
-      href="https://nwzz.xyz" target="_blank"
+      href="http://nwzz.xyz" target="_blank"
     >
       网站助手
     </a>
