--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,4 +32,7 @@ const { title } = Astro.props;
 		margin: 0 auto;
 		padding: 6rem 2rem 4rem;
 	}
+    li{
+        margin-left:1rem;
+    }
 </style>
