--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import Generator from '../components/Generator'
+import BackTop from '../components/BackTop.astro'
 import '../message.css'
 import 'katex/dist/katex.min.css'
 import 'highlight.js/styles/atom-one-dark.css'
@@ -10,14 +11,30 @@ import 'highlight.js/styles/atom-one-dark.css'
 
 <Layout title="ChatGPT API Demo">
   <main >
-      <Header />
+    <Header />
     <Generator client:load />
     <Footer />
+    <BackTop/>
   </main>
 </Layout>
 
-<style>
-html{
-  background-color: #ffffff;
+<script>
+async function checkCurrentAuth() {
+  const password = localStorage.getItem('pass')
+  const response = await fetch('/api/auth', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json',
+    },
+    body: JSON.stringify({
+      pass: password,
+    }),
+  })
+  const responseJson = await response.json()
+  if (responseJson.code !== 0) {
+    window.location.href = '/password'
+  }
 }
-</style>
+checkCurrentAuth()
+</script>
+
