feat: Theme switching

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,8 @@
+---
+import Toggle from './Toggle'
+
+
+---
 <footer op-60>
   <p mt-6 text-sm text-slate>
     <span pr-1>Made by</span>
@@ -14,5 +19,6 @@
     >
       Source Code
     </a>
+    <Toggle />
   </p>
 </footer>
