--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,12 +24,18 @@ const { title } = Astro.props;
 <style is:global>
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: #171921;
 		color: #ffffff;
+		background-color: #171921;
 	}
 	main {
 		max-width: 70ch;
 		margin: 0 auto;
 		padding: 6rem 2rem 4rem;
+	}
+	.dark {
+		background-color: #171921;
+	}
+	.light{
+		background-color: none;
 	}
 </style>
