feat: Toggle add  client:load

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,7 @@ const { title } = Astro.props;
 		font-family: system-ui, sans-serif;
 		color: #ffffff;
 		background-color: #171921;
+		transition: all .2s;
 	}
 	main {
 		max-width: 70ch;
@@ -36,6 +37,6 @@ const { title } = Astro.props;
 		background-color: #171921;
 	}
 	.light{
-		background-color: none;
+		background-color: transparent;
 	}
 </style>
