style: 底部禁止文章选中

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import Toggle from './Toggle'
 
 ---
 <footer op-60>
-  <p mt-6 text-sm text-slate>
+  <p mt-6 text-sm text-slate style="user-select: none;">
     <span pr-1>Made by</span>
     <a
     border-b border-slate border-none hover:border-dashed
