--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,16 +1,16 @@
 <footer op-60>
   <p mt-6 text-sm text-slate>
-    <span pr-1>Made by</span>
+    <span pr-1>whatqiu</span>
     <a
     border-b border-slate border-none hover:border-dashed
       href="https://ddiu.io" target="_blank"
     >
-      Diu
+     Copied from Diu
     </a>
     <span px-1>|</span>
     <a
       border-b border-slate border-none hover:border-dashed
-      href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
+      href="https://github.com/whatqiu/chatgpt-demo" target="_blank"
     >
       Source Code
     </a>
