change logo&optimize footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,11 +1,13 @@
 <footer op-60>
   <p mt-6 text-sm text-slate>
     <span pr-1>whatqiu</span>
+    <a href="http://nahida520.top" target="_blank" rel="noopener noreferrer"></a>
+    <span>Copied from</span>
     <a
       b-slate-link
       href="https://ddiu.io" target="_blank"
     >
-     Copied from Diu
+      Diu
     </a>
     <span px-1>|</span>
     <a
