feat: add sticky for footer

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import Logo from './Logo.astro'
 import Themetoggle from './Themetoggle.astro'
 ---
 
-<header>
+<header class="header-wrapper pt-24 px-8">
   <div class="fb">
     <Logo />
     <Themetoggle />
