--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,6 @@
-<footer op-60>
-  <p mt-6 text-sm text-slate>
-    <span pr-1>whatqiu</span>
-    <a href="http://nahida520.top" target="_blank" rel="noopener noreferrer"></a>
-    <span>Copied from</span>
+<footer>
+  <p mt-8 text-xs op-30>
+    <span pr-1>Made by</span>
     <a
       b-slate-link
       href="https://ddiu.io" target="_blank"
@@ -11,8 +9,8 @@
     </a>
     <span px-1>|</span>
     <a
-      border-b border-slate border-none hover:border-dashed
-      href="https://github.com/whatqiu/chatgpt-demo" target="_blank"
+      b-slate-link
+      href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
     >
       Source Code
     </a>
