--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,16 +3,18 @@ import Layout from '../layouts/Layout.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import Generator from '../components/Generator'
+import BackTop from '../components/BackTop.astro'
 import '../message.css'
 import 'katex/dist/katex.min.css'
 import 'highlight.js/styles/atom-one-dark.css'
 ---
 
-<Layout title="蛋智">
+<Layout title="ChatGPT API Demo">
   <main >
     <Header />
     <Generator client:load />
     <Footer />
+    <BackTop/>
   </main>
 </Layout>
 
