--- a/src/components/BackTop.astro
+++ b/src/components/BackTop.astro
@@ -10,10 +10,23 @@
     ></path></svg
   >
 </button>
-
+<button id="backbottom_btn" class="gpt-back-bottom-btn">
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    width="1.2em"
+    height="1.2em"
+    viewBox="0 0 32 32"
+    ><path
+      fill="currentColor"
+      d="M16 4L6 14l1.41 1.41L15 7.83V28h2V7.83l7.59 7.58L26 14L16 4z"
+    ></path></svg
+  >
+</button>
 <script>
   const backtop_btn = document.getElementById("backtop_btn") as HTMLElement;
+  const backbottom_btn = document.getElementById("backbottom_btn") as HTMLElement;
   backtop_btn.style.display = "none";
+  backbottom_btn.style.display = "block";
 
   window.addEventListener("scroll", () => {
     if (window.scrollY > 100) {
@@ -22,7 +35,11 @@
       backtop_btn.style.display = "none";
     }
   });
-
+   backbottom_btn.onclick = () => {
+    const scrollHeight = document.documentElement.scrollHeight
+    console.log(scrollHeight);
+    window.scrollTo({ top: scrollHeight, behavior: "smooth" });
+  };
   backtop_btn.onclick = () => {
     window.scrollTo({ top: 0, behavior: "smooth" });
   };
