--- a/src/components/BackTop.astro
+++ b/src/components/BackTop.astro
@@ -26,7 +26,7 @@
   const backtop_btn = document.getElementById("backtop_btn") as HTMLElement;
   const backbottom_btn = document.getElementById("backbottom_btn") as HTMLElement;
   backtop_btn.style.display = "none";
-  backbottom_btn.style.display = "block";
+  backbottom_btn.style.display = "none";
 
   window.addEventListener("scroll", () => {
     if (window.scrollY > 100) {
