chore: add store for ui

--- a/src/components/v2/Sidebar.astro
+++ b/src/components/v2/Sidebar.astro
@@ -2,7 +2,7 @@
 import ConversationSidebarItem from './ConversationSidebarItem.astro'
 ---
 
-<aside class="w-[300px] h-full border-r">
+<aside class="w-[300px] h-full border-r hidden md:block">
   <div class="h-12 border-b flex px-4 items-center">
     Conversations
   </div>
