--- a/src/components/v2/Header.astro
+++ b/src/components/v2/Header.astro
@@ -1,5 +1,14 @@
 <header class="flex items-center border-b h-12 px-4">
-  <div class="i-carbon-add-comment text-xl"></div>
+  <div id="sidebar-toggle-btn" class="i-carbon-add-comment text-xl"></div>
   <div class="flex-1 text-center">ChatGPT Demo</div>
   <div class="i-carbon-settings text-xl"></div>
 </header>
+
+<script>
+  import { toggleSidebar } from '@/strores/ui'
+
+  const sidebarToggleBtn = document.getElementById('sidebar-toggle-btn')
+  sidebarToggleBtn.addEventListener('click', () => {
+    toggleSidebar()
+  })
+</script>
