feat: v2 header, sidebar

--- a/src/components/v2/ChatConfiguration.astro
+++ b/src/components/v2/ChatConfiguration.astro
@@ -2,7 +2,7 @@
 import Button from './Button.astro'
 ---
 
-<div class="border p-4">
+<div class="border-b p-4">
   <div>
     <div>System Role</div>
     <textarea class="w-full mt-2 bg-transparent border"></textarea>
@@ -12,6 +12,6 @@ import Button from './Button.astro'
     <div class="mt-2 h-8 bg-white/10"></div>
   </div>
   <div class="mt-4 text-right">
-    <Button name="Update"></Button>
+    <Button text="Update" />
   </div>
 </div>
