--- a/src/components/v2/Button.astro
+++ b/src/components/v2/Button.astro
@@ -1,10 +1,23 @@
 ---
 interface Props {
-  name: string;
+  id?: string;
+  class?: string;
+  type?: 'normal' | 'ghost';
+  icon?: string;
+  text?: string;
 }
 
 const props = Astro.props
 ---
-<span class="inline-block border px-4 py-2">
-  { props.name }
-</span>
+<div
+  id={props.id}
+  class:list={[
+    'inline-flex items-center gap-1 rounded-md cursor-pointer',
+    (props.icon && !props.text) ? 'p-2' : 'px-2 py-1',
+    (!props.type || props.type === 'normal') && 'border hover:bg-darker',
+    props.class ?? '',
+  ]}
+>
+  { props.icon && <div class={props.icon}></div>}
+  { props.text && <div>{props.text}</div> }
+</div>
