--- a/src/components/v2/Settings.astro
+++ b/src/components/v2/Settings.astro
@@ -1,4 +1,4 @@
-<aside class="w-[300px] h-full border-l hidden md:block">
+<aside class="w-[300px] h-full border-l hidden lg:block">
   <div class="h-12 border-b flex px-4 items-center">
     Settings
   </div>
