--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 		{ import.meta.env.HEAD_SCRIPTS ? <Fragment set:html={import.meta.env.HEAD_SCRIPTS} /> : null }
 	</head>
-	<body>
+	<body class="bg-base fg-base">
 		<slot />
 	</body>
 </html>
@@ -26,22 +26,27 @@ const { title } = Astro.props;
 	:root {
 		--c-bg: #fbfbfb;
 		--c-fg: #444444;
+		--c-border: #e0e0e0;
 		--c-scroll: #d9d9d9;
 		--c-scroll-hover: #bbbbbb;
 		scrollbar-color: var(--c-scrollbar) var(--c-bg);
 	}
+	:root.dark {
+		--c-bg: #212121;
+		--c-fg: #ddddf0;
+		--c-border: #444444;
+		--c-scroll: #333333;
+		--c-scroll-hover: #555555;
+	}
 
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: var(--c-bg);
-		color: var(--c-fg);
+		/* background-color: var(--c-bg); */
+		/* color: var(--c-fg); */
 	}
 
-	html.dark {
-		--c-bg: #212121;
-		--c-fg: #ddddf0;
-		--c-scroll: #333333;
-		--c-scroll-hover: #555555;
+	* {
+		border-color: var(--c-border);
 	}
 
 	::-webkit-scrollbar {
