feat(ui): empty state for send component

--- a/src/components/v2/Header.astro
+++ b/src/components/v2/Header.astro
@@ -1,7 +1,7 @@
 ---
 import Button from './Button.astro'
 ---
-<header class="flex items-center border-b h-12 px-2">
+<header class="flex items-center border-b h-12 px-4">
   <Button
     id="sidebar-toggle-btn"
     class="text-xl md:hidden"
@@ -9,7 +9,7 @@ import Button from './Button.astro'
     icon="i-carbon-add-comment"
   />
   <div id="sidebar-toggle-btn" class=""></div>
-  <div class="flex-1 text-center font-extrabold">ChatGPT Demo</div>
+  <div class="flex-1 text-center font-extrabold">ChatGPT Demo V2</div>
   <Button
     id="settings-toggle-btn"
     class="text-xl lg:hidden"
