--- a/src/components/v2/ChatConfiguration.astro
+++ b/src/components/v2/ChatConfiguration.astro
@@ -2,7 +2,7 @@
 import Button from './Button.astro'
 ---
 
-<div class="border-b p-4">
+<div class="border-b px-6 py-4">
   <div>
     <div>System Role</div>
     <textarea class="w-full mt-2 bg-transparent border"></textarea>
