--- a/src/pages/v2/index.astro
+++ b/src/pages/v2/index.astro
@@ -7,7 +7,7 @@ import ModelsLayer from '@/components/v2/ModelsLayer'
 ---
 
 <Layout title="ChatGPT Api Demo">
-  <div class="h-screen w-screen flex">
+  <div class="h-100svh w-screen flex">
     <Sidebar />
     <Main />
     <Settings />
