--- a/src/components/v2/ChatConfiguration.astro
+++ b/src/components/v2/ChatConfiguration.astro
@@ -2,10 +2,10 @@
 import Button from './Button.astro'
 ---
 
-<div class="border-b px-6 py-4">
+<div class="border-b border-base px-6 py-4">
   <div>
     <div>System Role</div>
-    <textarea class="w-full mt-2 bg-transparent border"></textarea>
+    <textarea class="w-full mt-2 bg-transparent border border-base"></textarea>
   </div>
   <div mt-4>
     <div>Temperature</div>
