--- a/src/components/v2/Header.astro
+++ b/src/components/v2/Header.astro
@@ -1,7 +1,7 @@
 ---
 import Button from './Button.astro'
 ---
-<header class="flex items-center border-b h-12 px-4">
+<header class="flex items-center border-b border-base h-12 px-4">
   <Button
     id="sidebar-toggle-btn"
     class="text-xl md:hidden"
