--- a/src/components/v2/Settings.astro
+++ b/src/components/v2/Settings.astro
@@ -1,5 +1,5 @@
-<aside class="w-[300px] h-full border-l hidden lg:block">
-  <div class="h-12 border-b flex px-4 items-center">
+<aside class="w-[300px] h-full border-l border-base hidden lg:block">
+  <div class="h-12 border-b border-base flex px-4 items-center">
     Settings
   </div>
 </aside>
