--- a/src/components/v2/Sidebar.astro
+++ b/src/components/v2/Sidebar.astro
@@ -2,8 +2,8 @@
 import ConversationSidebarItem from './ConversationSidebarItem.astro'
 ---
 
-<aside class="w-[300px] h-full border-r hidden md:block">
-  <div class="h-12 border-b flex px-4 items-center">
+<aside class="w-[300px] h-full border-r border-base hidden md:block">
+  <div class="h-12 border-b border-base flex px-4 items-center">
     Conversations
   </div>
   { Array.from({ length: 4 }).map((_, i) => (
