--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,10 +26,9 @@ const { title } = Astro.props;
 	:root {
 		--c-bg: #fbfbfb;
 		--c-fg: #444444;
-		--c-border: #e0e0e0;
 		--c-scroll: #d9d9d9;
 		--c-scroll-hover: #bbbbbb;
-		scrollbar-color: var(--c-scrollbar) var(--c-bg);
+		/* scrollbar-color: var(--c-scrollbar) var(--c-bg); */
 	}
 	:root.dark {
 		--c-bg: #212121;
@@ -39,17 +38,7 @@ const { title } = Astro.props;
 		--c-scroll-hover: #555555;
 	}
 
-	html {
-		font-family: system-ui, sans-serif;
-		/* background-color: var(--c-bg); */
-		/* color: var(--c-fg); */
-	}
-
-	* {
-		border-color: var(--c-border);
-	}
-
-	::-webkit-scrollbar {
+	/* ::-webkit-scrollbar {
 		width: 6px;
 		height: 6px;
 	}
@@ -62,20 +51,5 @@ const { title } = Astro.props;
 	}
 	::-webkit-scrollbar-track {
 		background-color: var(--c-bg);
-	}
+	} */
 </style>
-
-<script>
-const initTheme = () => {
-  const darkSchema = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
-  const storageTheme = localStorage.getItem('theme')
-  if (storageTheme) {
-    document.documentElement.classList.toggle('dark', storageTheme === 'dark')
-  } else {
-    document.documentElement.classList.toggle('dark', darkSchema)
-  }
-}
-
-initTheme()
-
-</script>
