feat(ui): fix header, footer and modal

--- a/src/components/v2/Header.astro
+++ b/src/components/v2/Header.astro
@@ -1,7 +1,7 @@
 ---
 import Button from './Button.astro'
 ---
-<header class="flex items-center border-b border-base h-12 px-4">
+<header class="fixed top-0 left-0 right-0 flex items-center bg-base border-b border-base h-12 px-4">
   <Button
     id="sidebar-toggle-btn"
     class="text-xl md:hidden"
