--- a/src/components/v2/Main.astro
+++ b/src/components/v2/Main.astro
@@ -6,9 +6,9 @@ import Send from './Send'
 
 <main class="flex-1 flex flex-col">
   <Header />
-  <main class="flex-1 flex flex-col">
+  <main class="flex-1 mt-12 mb-14 flex flex-col">
     <ChatConfiguration />
     <div class="flex-1 overflow-y-scroll"></div>
-    <Send client:load />
   </main>
+  <Send client:load />
 </main>
