--- a/src/components/v2/Main.astro
+++ b/src/components/v2/Main.astro
@@ -4,7 +4,7 @@ import ChatConfiguration from './ChatConfiguration.astro';
 import Send from './Send'
 ---
 
-<main class="flex-1 flex flex-col">
+<main class="relative flex-1 flex flex-col">
   <Header />
   <main class="flex-1 mt-12 mb-14 flex flex-col">
     <ChatConfiguration />
