--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,17 +28,19 @@ const { title } = Astro.props;
 		--c-fg: #444444;
 		--c-scroll: #d9d9d9;
 		--c-scroll-hover: #bbbbbb;
-		/* scrollbar-color: var(--c-scrollbar) var(--c-bg); */
-	}
-	:root.dark {
-		--c-bg: #212121;
-		--c-fg: #ddddf0;
-		--c-border: #444444;
-		--c-scroll: #333333;
-		--c-scroll-hover: #555555;
 	}
 
-	/* ::-webkit-scrollbar {
+	@media (prefers-color-scheme: dark) {
+		:root {
+			--c-bg: #212121;
+			--c-fg: #ddddf0;
+			--c-border: #444444;
+			--c-scroll: #333333;
+			--c-scroll-hover: #555555;
+		}
+	}
+
+	::-webkit-scrollbar {
 		width: 6px;
 		height: 6px;
 	}
@@ -51,5 +53,5 @@ const { title } = Astro.props;
 	}
 	::-webkit-scrollbar-track {
 		background-color: var(--c-bg);
-	} */
+	}
 </style>
