--- a/src/components/v2/Main.astro
+++ b/src/components/v2/Main.astro
@@ -2,13 +2,17 @@
 import Header from './Header.astro'
 import ChatConfiguration from './ChatConfiguration.astro';
 import Send from './Send'
+
+import SingleChat from './chat/SingleChat'
 ---
 
 <main class="relative flex-1 flex flex-col">
   <Header />
   <main class="flex-1 mt-12 mb-14 flex flex-col">
-    <ChatConfiguration />
-    <div class="flex-1 overflow-y-scroll"></div>
+    <!-- <ChatConfiguration /> -->
+    <div class="flex-1 overflow-y-scroll">
+      <SingleChat client:load />
+    </div>
   </main>
   <Send client:load />
 </main>
