--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,8 +9,8 @@ import Themetoggle from './Themetoggle.astro'
     <Themetoggle />
   </div>
   <div class="fi mt-2">
-    <span class="gpt-title">ChatGPT</span>
-    <span class="gpt-subtitle">Demo</span>
+    <span class="gpt-title">GPT</span>
+    <span class="gpt-subtitle">智能问答</span>
   </div>
-  <p mt-1 op-60>Based on OpenAI API (gpt-3.5-turbo).</p>
+  <p mt-1 op-60>AI 智能问答机器人</p>
 </header>
