--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,47 +25,7 @@ const { title } = Astro.props;
         : null
     }
   </head>
-  <body>
+  <body class="bg-base fg-base">
     <slot />
   </body>
 </html>
-
-<style is:global>
-	:root {
-		--c-bg: #fbfbfb;
-		--c-fg: #444444;
-		--c-scroll: #d9d9d9;
-		--c-scroll-hover: #bbbbbb;
-	}
-
-	@media (prefers-color-scheme: dark) {
-		:root {
-			--c-bg: #212121;
-			--c-fg: #ddddf0;
-			--c-border: #444444;
-			--c-scroll: #333333;
-			--c-scroll-hover: #555555;
-		}
-	}
-
-  main {
-    max-width: 70ch;
-    margin: 0 auto;
-    padding: 6rem 2rem 4rem;
-  }
-
-  ::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
-  }
-  ::-webkit-scrollbar-thumb {
-    background-color: var(--c-scroll);
-    border-radius: 4px;
-  }
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--c-scroll-hover);
-  }
-  ::-webkit-scrollbar-track {
-    background-color: var(--c-bg);
-  }
-</style>
