--- a/src/components/v2/Main.astro
+++ b/src/components/v2/Main.astro
@@ -10,7 +10,7 @@ import Chat from './chat/Chat'
   <main class="flex-1 mt-12 mb-14 flex flex-col">
     <!-- <ChatConfiguration /> -->
     <div class="flex-1 overflow-y-scroll">
-      <!-- <Chat client:load /> -->
+      <Chat client:load />
     </div>
   </main>
   <Send client:load />
