--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,3 +23,28 @@ const { title } = Astro.props;
     <slot />
   </body>
 </html>
+
+<style is:global>
+  :root {
+    --c-scroll: #d9d9d9;
+    --c-scroll-hover: #bbbbbb;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --c-scroll: #333333;
+      --c-scroll-hover: #555555;
+    }
+  }
+
+  ::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--c-scroll);
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--c-scroll-hover);
+  }
+</style>
