--- a/src/pages/v2/index.astro
+++ b/src/pages/v2/index.astro
@@ -14,7 +14,7 @@ import Sidebar from '@/components/v2/Sidebar'
     </Sidebar>
     <Main />
     <Sidebar direction="right" class="hidden lg:block">
-      <Settings />
+      <Settings client:load />
     </Sidebar>
   </div>
   <ModalsLayer client:load />
