refactor: rename `chat` to `conversation`

--- a/src/components/v2/Header.astro
+++ b/src/components/v2/Header.astro
@@ -27,10 +27,10 @@ import Button from './Button.astro'
   const sidebarToggleBtn = document.getElementById('sidebar-toggle-btn')
   const settingsToggleBtn = document.getElementById('settings-toggle-btn')
 
-  sidebarToggleBtn.addEventListener('click', () => {
+  sidebarToggleBtn!.addEventListener('click', () => {
     showConversationSidebar.set(true)
   })
-  settingsToggleBtn.addEventListener('click', () => {
+  settingsToggleBtn!.addEventListener('click', () => {
     showSettingsSidebar.set(true)
   })
 </script>
