--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,9 +10,9 @@
     <span px-1>|</span>
     <a
       b-slate-link
-      href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
+      href="https://webguru.live" target="_blank"
     >
-      Source Code
+      WebGuru
     </a>
   </p>
 </footer>
