--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
       b-slate-link
       href="https://ddiu.io" target="_blank"
     >
-      Diu
+      WebGuru
     </a>
     <span px-1>|</span>
     <a
