--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,5 +12,5 @@ import Themetoggle from './Themetoggle.astro'
     <span class="gpt-title">GPT</span>
     <span class="gpt-subtitle">Physics</span>
   </div>
-  <p mt-1 op-60>WebGuru &#169;2023</p>
+  <p mt-1 op-60>Learning Your Way</p>
 </header>
