--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     <span pr-1>Made by</span>
     <a
       b-slate-link
-      href="https://ddiu.io" target="_blank"
+      href="https://webguru.live" target="_blank"
     >
       WebGuru
     </a>
@@ -12,7 +12,7 @@
       b-slate-link
       href="https://webguru.live" target="_blank"
     >
-      WebGuru
+      Alex Leeor
     </a>
   </p>
 </footer>
