修改网页名称

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,18 +1,11 @@
 <footer>
   <p mt-8 text-xs op-30>
-    <span pr-1>Made by</span>
+    <span pr-1>Build by</span>
     <a
       b-slate-link
-      href="https://ddiu.io" target="_blank"
+      href="http://www.entertang.work/" target="_blank"
     >
-      Diu
-    </a>
-    <span px-1>|</span>
-    <a
-      b-slate-link
-      href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
-    >
-      Source Code
+      ET
     </a>
   </p>
 </footer>
