--- a/src/components/v2/Main.astro
+++ b/src/components/v2/Main.astro
@@ -6,9 +6,9 @@ import Conversation from './conversation/Conversation'
 import ConversationInstance from './instance/ConversationInstance'
 ---
 
-<main class="relative flex-1 flex flex-col">
+<main class="relative flex-1 flex flex-col overflow-hidden">
   <Header />
-  <main class="flex-1 mt-12 mb-14 flex flex-col">
+  <main class="flex-1 mt-12 mb-14 flex flex-col overflow-hidden">
     <!-- <ConversationConfiguration /> -->
     <div class="flex-1 overflow-y-scroll">
       <Conversation client:load />
