feat(ui): max width for main area

--- a/src/components/v2/Main.astro
+++ b/src/components/v2/Main.astro
@@ -10,7 +10,7 @@ import ConversationInstance from './instance/ConversationInstance'
   <Header />
   <main class="flex-1 mt-12 mb-14 flex flex-col overflow-hidden">
     <!-- <ConversationConfiguration /> -->
-    <div class="flex-1 overflow-y-scroll">
+    <div class="flex-1 overflow-hidden">
       <Conversation client:load />
       <ConversationInstance client:load />
     </div>
