refactor: adjust directory structures

--- a/src/components/v2/Header.astro
+++ b/src/components/v2/Header.astro
@@ -1,5 +1,5 @@
 ---
-import Button from './Button.astro'
+import Button from './ui/Button.astro'
 ---
 <header class="absolute top-0 left-0 right-0 flex items-center bg-base border-b border-base h-12 px-4">
   <Button
