--- a/src/components/v2/main/ConversationConfiguration.astro
+++ b/src/components/v2/main/ConversationConfiguration.astro
@@ -1,5 +1,5 @@
 ---
-import Button from './Button.astro'
+import Button from '../ui/Button.astro'
 ---
 
 <div class="border-b border-base px-6 py-4">
