--- a/src/pages/v2/index.astro
+++ b/src/pages/v2/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '@/layouts/Layout.astro'
 import Main from '@/components/v2/Main.astro'
-import ConversationSidebar from '@/components/v2/ConversationSidebar'
-import Settings from '@/components/v2/SettingsSidebar'
+import ConversationSidebar from '@/components/v2/conversations/ConversationSidebar'
+import Settings from '@/components/v2/settings/SettingsSidebar'
 import ModalsLayer from '@/components/v2/ModalsLayer'
-import Sidebar from '@/components/v2/Sidebar'
+import Sidebar from '@/components/v2/ui/Sidebar'
 ---
 
 <Layout title="ChatGPT Api Demo">
