--- a/src/components/v2/Main.astro
+++ b/src/components/v2/Main.astro
@@ -2,8 +2,7 @@
 import Header from './Header.astro'
 import Send from './Send'
 
-import Conversation from './conversation/Conversation'
-import ConversationInstance from './instance/ConversationInstance'
+import Conversation from './main/Conversation'
 ---
 
 <main class="relative flex-1 flex flex-col overflow-hidden">
@@ -12,7 +11,6 @@ import ConversationInstance from './instance/ConversationInstance'
     <!-- <ConversationConfiguration /> -->
     <div class="flex-1 overflow-hidden">
       <Conversation client:load />
-      <ConversationInstance client:load />
     </div>
   </main>
   <Send client:load />
