feat: markdown parse in v2

--- a/src/pages/v2/index.astro
+++ b/src/pages/v2/index.astro
@@ -5,6 +5,7 @@ import ConversationSidebar from '@/components/v2/conversations/ConversationSideb
 import Settings from '@/components/v2/settings/SettingsSidebar'
 import ModalsLayer from '@/components/v2/ModalsLayer'
 import Sidebar from '@/components/v2/ui/Sidebar'
+import '@/message.css'
 ---
 
 <Layout title="ChatGPT Api Demo">
