--- a/src/message.css
+++ b/src/message.css
@@ -1,3 +1,11 @@
+.prose :where(.prose>:first-child):not(:where([class~=not-prose] *)) {
+  margin-top: 0;
+}
+
+.prose :where(.prose>:last-child):not(:where([class~=not-prose] *)) {
+  margin-bottom: 0;
+}
+
 .message pre {
   background-color: #64748b10;
   font-size: 0.8rem;
