--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -33,12 +33,14 @@ async function handleSubmit() {
       'Content-Type': 'application/json',
     },
     body: JSON.stringify({
-      pass: password,
+      inputPass: password,
     }),
   })
   const responseJson = await response.json()
   if (responseJson.code === 0) {
-    localStorage.setItem('pass', password)
+    // 将密码加密保存到localstorage
+    const storedPass = responseJson.password
+    localStorage.setItem('pass', storedPass)
     window.location.href = '/'
   } else {
     inputContainer.classList.add('invalid')
