--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,15 +10,18 @@ const { title } = Astro.props;
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
-    <link rel="icon" type="image/svg+xml" href="/icon.svg">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-    <link rel="mask-icon" href="/icon.svg" color="#FFFFFF">
-    <meta name="theme-color" content="#212129">
-    <meta name="generator" content={Astro.generator}>
-    <meta name="description" content="">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,viewport-fit=cover"
+    />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+    <link rel="mask-icon" href="/icon.svg" color="#FFFFFF" />
+    <meta name="theme-color" content="#212129" />
+    <meta name="generator" content={Astro.generator} />
+    <meta name="description" content="" />
     <title>{title}</title>
-    <meta name="description" content="A simple blog">
+    <meta name="description" content="A simple blog" />
     {
       import.meta.env.HEAD_SCRIPTS
         ? (
@@ -29,8 +32,10 @@ const { title } = Astro.props;
     <!-- netlify-disable-blocks -->
     {
       import.meta.env.PROD && (
-         <script is:inline src="/registerSW.js"></script>
-         <link rel="manifest" href="/manifest.webmanifest" />
+        <>
+          <script is:inline src="/registerSW.js" />
+          <link rel="manifest" href="/manifest.webmanifest" />
+        </>
       )
     }
     <!-- netlify-disable-end -->
@@ -45,12 +50,9 @@ const { title } = Astro.props;
     --c-scroll: #d9d9d9;
     --c-scroll-hover: #bbbbbb;
   }
-
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --c-scroll: #333333;
-      --c-scroll-hover: #555555;
-    }
+  html.dark {
+    --c-scroll: #333333;
+    --c-scroll-hover: #555555;
   }
 
   ::-webkit-scrollbar {
@@ -64,3 +66,14 @@ const { title } = Astro.props;
     background-color: var(--c-scroll-hover);
   }
 </style>
+
+<script>
+(function() {
+  const prefersDark
+    = window.matchMedia
+    && window.matchMedia('(prefers-color-scheme: dark)').matches
+  const setting = localStorage.getItem('theme') || 'auto'
+  if (setting === 'dark' || (prefersDark && setting !== 'light'))
+    document.documentElement.classList.toggle('dark', true)
+})()
+</script>
