--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,6 +10,13 @@
     <span px-1>|</span>
     <a
       b-slate-link
+      href="https://www.lizh.cc" target="_blank"
+    >
+      Xinghe
+    </a>
+    <span px-1>|</span>
+    <a
+      b-slate-link
       href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
     >
       Source Code
