--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -11,6 +11,7 @@ import Layout from '../layouts/Layout.astro'
         <div class="i-carbon-arrow-right" />
       </div>
     </div>
+    <div class="op-30 mt-4 astro-MRWAQY26">Contact with: xinghehy@qq.com.</div>
   </main>
 </Layout>
 
