--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -11,7 +11,10 @@ import Layout from '../layouts/Layout.astro'
         <div class="i-carbon-arrow-right" />
       </div>
     </div>
-    <div class="op-30 mt-4 astro-MRWAQY26"><a href="mailto:xinghehy@qq.com">Contact with: xinghehy@qq.com</a>.</div>
+    <div class="op-30 text-xs mt-4 astro-MRWAQY26 astro-MRWAQY26">
+      Contact with: 
+      <a b-slate-link href="mailto:xinghehy@qq.com" class="astro-MRWAQY26">xinghehy@qq.com</a>.
+    </div>
   </main>
 </Layout>
 
