--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 <footer>
   <p mt-8 text-xs op-30>
+    <span pr-1>Admin</span>
     <a
       b-slate-link
       href="https://www.lizh.cc" target="_blank"
@@ -7,7 +8,7 @@
       Xinghe
     </a>
     <span px-1>|</span>
-     <span pr-1>Made by</span>
+    <span pr-1>Made by</span>
     <a
       b-slate-link
       href="https://ddiu.io" target="_blank"
