--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Sidebar from '@/components/ui/Sidebar'
 import BuildStores from '@/components/client-only/BuildStores'
 ---
 
-<Layout title="ChatGPT Api Demo">
+<Layout title="CI&T Internal Experimental ChatGPT">
   <div class="h-100dvh w-screen flex">
     <Sidebar direction="left" class="hidden md:block">
       <ConversationSidebar client:load />
