--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,14 +3,14 @@
     <span pr-1>Made by</span>
     <a
       b-slate-link
-      href="https://ddiu.io" target="_blank"
+      href="#" target="_blank"
     >
-      Diu
+      Max
     </a>
     <span px-1>|</span>
     <a
       b-slate-link
-      href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
+      href="#" target="_blank"
     >
       Source Code
     </a>
