--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ import Themetoggle from './Themetoggle.astro'
   </div>
   <div class="fi mt-2">
     <span class="gpt-title">ChatGPT</span>
-    <span class="gpt-subtitle">Demo</span>
+    <span class="gpt-subtitle">Bridge</span>
   </div>
-  <p mt-1 op-60>Based on OpenAI API (gpt-3.5-turbo).</p>
+  <p mt-1 op-60>Based on OpenAI API (gpt-3.5-turbo). All Privacy Protection</p>
 </header>
