--- a/来源/组件/Header.astro
+++ b/来源/组件/Header.astro
@@ -9,7 +9,7 @@ import Themetoggle from './Themetoggle.astro'
     <Themetoggle />
   </div>
   <div class="fi mt-2">
-    <span class="gpt-title">ChatGPT</span>
+    <span class="gpt-title">吴桐のChatGPT</span>
     <span class="gpt-subtitle">Demo</span>
   </div>
   <p mt-1 op-60>Based on OpenAI API (gpt-3.5-turbo).</p>
