perf: add return condition

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,8 +19,10 @@ import 'highlight.js/styles/atom-one-dark.css'
 <script>
 async function checkCurrentAuth() {
   const password = localStorage.getItem('pass')
-  if(!password)
-  window.location.href = '/password'
+  if(!password) {
+    window.location.href = '/password'
+    return
+  }
   const response = await fetch('/api/auth', {
     method: 'POST',
     headers: {
